--- a/templates/speechcards_page.mustache
+++ b/templates/speechcards_page.mustache
@@ -21,6 +21,9 @@
 
 
       </div>
+      <div class="wordcards-speechcards-speaker-icon" tabindex="0">
+          <i class="fa fa-volume-up"></i>
+      </div>
     <div id="wordcards-star-rating">
     </div>
     {{> mod_wordcards/ttrecorder}}
