--- a/styles.css
+++ b/styles.css
@@ -2082,3 +2082,11 @@ button.definitions-next.btn .fa-arrow-right:before {
     margin-top: 10px;
     max-width: 150px;
 }
+.wordcards_selectedpoolnowords {
+    max-width: 500px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    border: 1px, grey, solid;
+}
