faster dictionary search

--- a/templates/ww_skeleton.mustache
+++ b/templates/ww_skeleton.mustache
@@ -1,7 +1,6 @@
-{{#terms}}
-<div class="mod_wordcards_word_wizard_oneresult" >
+<div class="mod_wordcards_word_wizard_oneresult" id="mod_wordcards_wwskeleton_{{termno}}" >
     <fieldset class="mod_wordcards_ww_fieldset border p-2">
-        <legend class="w-auto">{{.}}</legend>
+        <legend class="w-auto">{{term}}</legend>
         <div class="container ml-0">
             <div class="row">
 
@@ -16,4 +15,3 @@
         </div>
     </fieldset>
 </div>
-{{/terms}}
