slightly better display of chooser

--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -110,6 +110,7 @@
         {{/isstepsmode}}
 
       <h3 class="list-of-words">{{#str}}listofwords, mod_wordcards{{/str}}</h3>
+      {{{langchooser}}}
       <div id="definitions-page-{{uniqid}}" class="definitions-container">
       <div class="terms clearfix definition_grid">
          {{#definitions}}
