--- a/styles.css
+++ b/styles.css
@@ -2090,3 +2090,8 @@ button.definitions-next.btn .fa-arrow-right:before {
     padding: 20px;
     border: 1px, grey, solid;
 }
+.wordcards_deflang_chooser {
+    float: right;
+    padding: 5px;
+    
+}
