improvements to language chooser

--- a/templates/word_wizard.mustache
+++ b/templates/word_wizard.mustache
@@ -7,7 +7,7 @@
         {{/langdefs}}
     </select><br>
     <textarea id="{{uniqid}}_ww_words" placeholder="{{#str}}ww_words, mod_wordcards {{/str}}" name="ww_words" rows="4" cols="50"></textarea><br>
-    <a class="btn btn-primary" id="{{uniqid}}_fetchbtn">{{#str}}ww_words_fetch, mod_wordcards{{/str}}</a>
+    <a class="btn btn-primary ww_words_fetch_btn" id="{{uniqid}}_fetchbtn">{{#str}}ww_words_fetch, mod_wordcards{{/str}}</a>
     <div id="{{uniqid}}_resultscont" class="mod_wordcards_ww_results"></div>
 </div>
 
