--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -13,7 +13,7 @@
 <div class="mod_wordcards_activity_header">
     {{#freemodeavailable}}
         {{^isfreemode}}
-            <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}" class="btn btn-outline-primary pull-right">
+            <a href="{{config.wwwroot}}/mod/wordcards/freemode.php?id={{cmid}}&embed={{embed}}" class="btn btn-outline-primary pull-right">
                 <i class='fa fa-random mr-1'></i>
                 {{#str}}freemode, mod_wordcards{{/str}}
             </a>
@@ -21,7 +21,7 @@
     {{/freemodeavailable}}
     {{#stepsmodeavailable}}
         {{^isstepsmode}}
-            <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{cmid}}" class="btn btn-outline-primary pull-right">
+            <a href="{{config.wwwroot}}/mod/wordcards/view.php?id={{cmid}}&embed={{embed}}" class="btn btn-outline-primary pull-right">
             <i class='fa fa-random mr-1'></i>
             {{#str}}stepsmode, mod_wordcards{{/str}}
             </a>
