tightened up embed params on links in mobile app

--- a/templates/finish_page.mustache
+++ b/templates/finish_page.mustache
@@ -42,13 +42,14 @@
                 </a>
             </div>
         {{/canfreemode}}
-
+        {{#courseurl}}
         <div class="wordcards_actionbutton">
             <a class="btn btn-secondary solo_backtocourse center" href="{{{courseurl}}}">
                 <i class="icon fa fa-home fa-fw " aria-hidden="true"></i>
                 <span> {{#str}}backtocourse, mod_wordcards{{/str}}</span>
             </a>
         </div>
+        {{/courseurl}}
     </div>
 
 </div>
