a few tweaks for form defaults and style issues

--- a/templates/deflang_chooser.mustache
+++ b/templates/deflang_chooser.mustache
@@ -1,6 +1,6 @@
 <div id="wordcards_chooser_cont_{{uniqid}}" class="wordcards_deflang_chooser">
     {{{dropdownlist}}}
-    <button type="button" id="{{uniqid}}_setpref">{{#str}}choose_deflang, mod_wordcards{{/str}}</button>
+    <button type="button" class="btn btn-secondary" id="{{uniqid}}_setpref">{{#str}}choose_deflang, mod_wordcards{{/str}}</button>
 </div>
 {{^element.frozen}}
     {{#js}}
