--- a/templates/deflang_chooser.mustache
+++ b/templates/deflang_chooser.mustache
@@ -12,14 +12,16 @@
             //set handler to get set pref according to selection, and reload
            defbtn.on("click", function(e){
              var pref = defselect.val();
-             /*
-             if(pref==='{{activitydefault}}'){
-                pref=false;
+             if(pref==='{{activitydefault}}' || pref===''){
+                //clear the preference
+                repository.setUserPreference('wordcards_deflang')
+                    .then(function(ret){window.location.reload();})
+                    .catch(notification.exception)
+             }else{
+                repository.setUserPreference('wordcards_deflang',pref)
+                    .then(function(ret){window.location.reload();})
+                    .catch(notification.exception)
              }
-             */
-             repository.setUserPreference('wordcards_deflang',pref)
-                .then(function(ret){window.location.reload();})
-                .catch(notification.exception)
            });
         });
     {{/js}}
