--- a/templates/imagemakercontrols.mustache
+++ b/templates/imagemakercontrols.mustache
@@ -43,7 +43,7 @@
                 id="{{uniqid}}_mod_wordcards_imageprompt"
                 rows="3"
                 placeholder="{{#str}} imageprompt_placeholder, mod_wordcards {{/str}}"
-        >{{model_sentence}}</textarea>
+        >{{term}}. {{model_sentence}}</textarea>
     </div>
     <span class="font-weight-bold">
         {{#str}} imagequality, mod_wordcards{{/str}}
