changes for Model 5.0 and PHP 8.4

--- a/templates/keyboard.mustache
+++ b/templates/keyboard.mustache
@@ -12,13 +12,13 @@
   
   <div id='chunk-input-controls'>
     
-    <div id='delete-chunk-input' class='btn-primary chunk-input-control'>
+    <button id='delete-chunk-input' type="button" class='btn btn-primary btn-lg chunk-input-control'>
       <i class='fa fa-times-rectangle-o'></i>
-    </div>
+    </button>
     
-    <div id='submit-chunk-input' class='btn-success chunk-input-control'>
+    <button id='submit-chunk-input' type="button" class='btn btn-success btn-lg chunk-input-control'>
       <i class='fa fa-check'></i>
-    </div>
+    </button>
     
   </div>
 </div>
