justify images in list better

--- a/styles.css
+++ b/styles.css
@@ -1949,6 +1949,7 @@ button.definitions-next.btn .fa-arrow-right:before {
         margin-top: 0;
         max-width: none;
         text-align: left;
+        width: 80%;
     }
 }
 
