--- a/templates/deflang_chooser.mustache
+++ b/templates/deflang_chooser.mustache
@@ -1,4 +1,4 @@
-<div id="wordcards_chooser_cont_{{uniqid}}" class="wordcards_deflang_chooser">
+<div id="wordcards_chooser_cont_{{uniqid}}" class="{{cssprefix}}_deflang_chooser">
     {{{dropdownlist}}}
     <button type="button" class="btn btn-secondary" id="{{uniqid}}_setpref">{{#str}}choose_deflang, mod_wordcards{{/str}}</button>
 </div>
