--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -51,10 +51,15 @@
                   <div class="flip-card-front" data-face="term">
                      {{>mod_wordcards/my_words_button}}
                      <div class="term" data-termid="{{id}}">
+                         {{#imageonfront}}{{#image}}
+                         <div class="term-image  term-image-{{id}}">
+                             <img src="{{image}}" class="flash_img" alt=""/>
+                         </div>
+                         {{/image}}{{/imageonfront}}
                         <div class="term-title">{{term}}</div>
-                        <i id="card-audio" style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}"  tabindex="0" class="fa fa-volume-up definition-play-tts"></i>
+                        <i id="card-audio" style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}"  tabindex="0" class="fa fa-volume-up definition-play-tts {{#imageonfront}}compact-cardaudio{{/imageonfront}}"></i>
                         {{#model_sentence}}
-                           <div class="term-modelsentence">
+                           <div class="term-modelsentence {{#imageonfront}}compact-modelsentence{{/imageonfront}}">
                               <h5>{{#str}}model_sentence, mod_wordcards{{/str}}</h5>
                               <div class="term-modelsentence-container">
                                  <span>{{model_sentence}}</span>
@@ -72,6 +77,9 @@
                      {{>mod_wordcards/my_words_button}}
                      <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
                         <div class="term-title">
+                             {{term}}
+                        </div>
+                        <div class="term-title">
                            {{{definition}}}
                         </div>
                         <div class="retrieval-buttons">
@@ -82,11 +90,11 @@
                            {{>mod_wordcards/youglish}}
                         </div>
                          {{/youglish.lang}}
-                     {{#image}}
-                        <div class="term-image  term-image-{{id}}">
-                           <img src="{{image}}" class="flash_img" alt=""/>
-                        </div>
-                     {{/image}}
+                         {{^imageonfront}}{{#image}}
+                            <div class="term-image  term-image-{{id}}">
+                               <img src="{{image}}" class="flash_img" alt=""/>
+                            </div>
+                       {{/image}}{{/imageonfront}}
                      </div>
                   </div>
                </div>
