--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -66,9 +66,6 @@
                                  <span data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}"  tabindex="0" class="model-sentence-play-tts term-modelsentence-small"  style="cursor:pointer;"></span>
                               </div>
                            </div>
-
-
-
                         {{/model_sentence}}
                      </div>
                   </div>
@@ -79,7 +76,7 @@
                         <div class="term-title">
                              {{term}}
                         </div>
-                        <div class="term-title">
+                        <div class="term-title term-title-definition">
                            {{{definition}}}
                         </div>
                         <div class="retrieval-buttons">
