added some CSS for the progress dashboard

--- a/templates/user_courseprogress_dashboard.mustache
+++ b/templates/user_courseprogress_dashboard.mustache
@@ -2,11 +2,11 @@
     <div class="row justify-content-center">
         <div class="col-12 col-sm-6 col-md-4 mb-4">
             <div class="wc-progressdash-grid-label">{{#str}} termslearned , mod_wordcards {{/str}}</div>
-            <div class="wc-progressdash-grid-item"><span class="wc-pg-upperno">{{termslearned}}</span> / <span class="wc-pg-lowerno">{{totalterms}}</span></div>
+            <div class="wc-progressdash-grid-item"><span class="wc-pg-upperno">{{termslearned}}</span><span class="wc-pg-lowerno">{{totalterms}}</span></div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 mb-4">
             <div class="wc-progressdash-grid-label">{{#str}} activitiescomplete , mod_wordcards {{/str}}</div>
-            <div class="wc-progressdash-grid-item"><span class="wc-pg-upperno">{{activitiescomplete}}</span> / <span class="wc-pg-lowerno">{{totalactivities}}</span></div>
+            <div class="wc-progressdash-grid-item"><span class="wc-pg-upperno">{{activitiescomplete}}</span><span class="wc-pg-lowerno">{{totalactivities}}</span></div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 mb-4">
             <div class="wc-progressdash-grid-label">{{#str}} langchooser , mod_wordcards {{/str}}</div>
